--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "editor.formatOnSave": true,
     "cSpell.words": [
         "amar",
+        "basheggsegss",
+        "eggsegss",
         "obstudent",
         "obteddy"
     ]
