database creating connection, creating table, adding data, user data input, gui for adding data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,17 @@
     "cSpell.words": [
         "amar",
         "basheggsegss",
+        "dbname",
         "eggsegss",
         "obstudent",
-        "obteddy"
+        "obteddy",
+        "psycopg"
     ],
     "cSpell.ignoreWords": [
-        "onclick"
+        "ipady",
+        "mithukundu",
+        "onclick",
+        "pady",
+        "relx"
     ]
 }
