--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "editor.formatOnSave": true,
     "cSpell.words": [
         "amar",
+        "asul",
         "basheggsegss",
         "dbname",
         "eggsegss",
