teckat certificate generation api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,8 @@
         "teckatdb"
     ],
     "cSpell.ignoreWords": [
+        "certi",
+        "generate",
         "ipady",
         "mithukundu",
         "onclick",
